expectation updates after rebase
Signed-off-by: Ashwin Naren <arihant2math@gmail.com>

--- a/tests/wpt/meta/IndexedDB/cursor-overloads.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/cursor-overloads.any.js.ini
@@ -2,6 +2,7 @@
   expected: ERROR
 
 [cursor-overloads.any.html]
+  expected: ERROR
   [Validate the overloads of IDBObjectStore.openCursor(), IDBIndex.openCursor() and IDBIndex.openKeyCursor()]
     expected: FAIL
 
@@ -10,5 +11,6 @@
   expected: ERROR
 
 [cursor-overloads.any.worker.html]
+  expected: ERROR
   [Validate the overloads of IDBObjectStore.openCursor(), IDBIndex.openCursor() and IDBIndex.openKeyCursor()]
     expected: FAIL
