--- a/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
@@ -1,5 +1,5 @@
 [idb-explicit-commit.any.worker.html]
-  expected: TIMEOUT
+  expected: ERROR
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -22,17 +22,20 @@
     expected: FAIL
 
   [Transactions with same scope should stay in program order, even if one calls commit.]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Transactions that explicitly commit and have errors should abort.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: NOTRUN
+    expected: FAIL
+
+  [Explicitly committed data can be read back out.]
+    expected: FAIL
 
 
 [idb-explicit-commit.any.html]
-  expected: TIMEOUT
+  expected: ERROR
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -55,10 +58,13 @@
     expected: FAIL
 
   [Transactions with same scope should stay in program order, even if one calls commit.]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Transactions that explicitly commit and have errors should abort.]
-    expected: NOTRUN
+    expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: NOTRUN
+    expected: FAIL
+
+  [Explicitly committed data can be read back out.]
+    expected: FAIL
