--- a/tests/wpt/meta/IndexedDB/idbfactory_open.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbfactory_open.any.js.ini
@@ -5,6 +5,9 @@
   [IDBFactory.open() - second open's transaction is available to get objectStores]
     expected: FAIL
 
+  [Calling open() with version argument 9007199254740991 should not throw.]
+    expected: FAIL
+
 
 [idbfactory_open.any.sharedworker.html]
   expected: ERROR
@@ -17,4 +20,10 @@
     expected: FAIL
 
   [IDBFactory.open() - second open's transaction is available to get objectStores]
+    expected: FAIL
+
+  [Calling open() with version argument 9007199254740991 should not throw.]
+    expected: FAIL
+
+  [Calling open() with version argument 1.5 should not throw.]
     expected: FAIL
