--- a/tests/wpt/meta/IndexedDB/idbindex_tombstones.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbindex_tombstones.any.js.ini
@@ -1,28 +1,26 @@
 [idbindex_tombstones.any.worker.html]
-  expected: TIMEOUT
   [Forward iteration over an index in a readonly transaction]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Backward iteration over an index in a readonly transaction]
-    expected: NOTRUN
+    expected: FAIL
 
   [Forward iteration over an index in a readwrite transaction]
-    expected: NOTRUN
+    expected: FAIL
 
   [Backward iteration over an index in a readwrite transaction]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [idbindex_tombstones.any.html]
-  expected: TIMEOUT
   [Forward iteration over an index in a readonly transaction]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Backward iteration over an index in a readonly transaction]
-    expected: NOTRUN
+    expected: FAIL
 
   [Forward iteration over an index in a readwrite transaction]
-    expected: NOTRUN
+    expected: FAIL
 
   [Backward iteration over an index in a readwrite transaction]
-    expected: NOTRUN
+    expected: FAIL
