--- a/tests/wpt/meta/IndexedDB/idbobjectstore_add.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_add.any.js.ini
@@ -2,9 +2,6 @@
   expected: ERROR
 
 [idbobjectstore_add.any.worker.html]
-  [add() where an index has unique:true specified]
-    expected: FAIL
-
   [add() autoIncrement and inline keys]
     expected: FAIL
 
@@ -12,6 +9,9 @@
     expected: FAIL
 
   [Object store has autoIncrement:true and the key path is an object attribute]
+    expected: FAIL
+
+  [add() a record where a value being indexed does not meet the constraints of a valid key]
     expected: FAIL
 
 
@@ -19,9 +19,6 @@
   expected: ERROR
 
 [idbobjectstore_add.any.html]
-  [add() where an index has unique:true specified]
-    expected: FAIL
-
   [add() autoIncrement and inline keys]
     expected: FAIL
 
@@ -29,4 +26,7 @@
     expected: FAIL
 
   [Object store has autoIncrement:true and the key path is an object attribute]
+    expected: FAIL
+
+  [add() a record where a value being indexed does not meet the constraints of a valid key]
     expected: FAIL
