--- a/tests/wpt/meta/IndexedDB/idbobjectstore_getAll.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_getAll.any.js.ini
@@ -11,6 +11,9 @@
   [Get all values with invalid query keys]
     expected: FAIL
 
+  [Get all values with transaction.commit()]
+    expected: FAIL
+
 
 [idbobjectstore_getAll.any.serviceworker.html]
   expected: ERROR
@@ -26,6 +29,9 @@
     expected: FAIL
 
   [Get all values with invalid query keys]
+    expected: FAIL
+
+  [Get all values with transaction.commit()]
     expected: FAIL
 
 
