--- a/tests/wpt/meta/IndexedDB/idbobjectstore_put.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_put.any.js.ini
@@ -5,9 +5,6 @@
   [put() record with key already exists]
     expected: FAIL
 
-  [put() where an index has unique:true specified]
-    expected: FAIL
-
   [autoIncrement and inline keys]
     expected: FAIL
 
@@ -15,6 +12,9 @@
     expected: FAIL
 
   [Object store has autoIncrement:true and the key path is an object attribute]
+    expected: FAIL
+
+  [put() a record where a value being indexed does not meet the constraints of a valid key]
     expected: FAIL
 
 
@@ -25,9 +25,6 @@
   [put() record with key already exists]
     expected: FAIL
 
-  [put() where an index has unique:true specified]
-    expected: FAIL
-
   [autoIncrement and inline keys]
     expected: FAIL
 
@@ -35,4 +32,7 @@
     expected: FAIL
 
   [Object store has autoIncrement:true and the key path is an object attribute]
+    expected: FAIL
+
+  [put() a record where a value being indexed does not meet the constraints of a valid key]
     expected: FAIL
