--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes-cursors.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes-cursors.any.js.ini
@@ -1,16 +1,15 @@
 [reading-autoincrement-indexes-cursors.any.worker.html]
-  expected: TIMEOUT
   [IDBIndex.openCursor() iterates over an index on the autoincrement key]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBIndex.openKeyCursor() iterates over an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.openCursor() iterates over an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.openKeyCursor() iterates over an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [reading-autoincrement-indexes-cursors.any.serviceworker.html]
@@ -20,15 +19,14 @@
   expected: ERROR
 
 [reading-autoincrement-indexes-cursors.any.html]
-  expected: TIMEOUT
   [IDBIndex.openCursor() iterates over an index on the autoincrement key]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBIndex.openKeyCursor() iterates over an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.openCursor() iterates over an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.openKeyCursor() iterates over an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
