--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-store-cursors.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-store-cursors.any.js.ini
@@ -1,19 +1,17 @@
 [reading-autoincrement-store-cursors.any.worker.html]
-  expected: TIMEOUT
   [IDBObjectStore.openCursor() iterates over an autoincrement store]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBObjectStore.openKeyCursor() iterates over an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [reading-autoincrement-store-cursors.any.html]
-  expected: TIMEOUT
   [IDBObjectStore.openCursor() iterates over an autoincrement store]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBObjectStore.openKeyCursor() iterates over an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [reading-autoincrement-store-cursors.any.sharedworker.html]
