--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-store.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-store.any.js.ini
@@ -5,24 +5,22 @@
   expected: ERROR
 
 [reading-autoincrement-store.any.worker.html]
-  expected: TIMEOUT
   [IDBObjectStore.getAll() for an autoincrement store]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBObjectStore.getAllKeys() for an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBObjectStore.get() for an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [reading-autoincrement-store.any.html]
-  expected: TIMEOUT
   [IDBObjectStore.getAll() for an autoincrement store]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBObjectStore.getAllKeys() for an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBObjectStore.get() for an autoincrement store]
-    expected: NOTRUN
+    expected: FAIL
