--- a/tests/wpt/meta/IndexedDB/structured-clone.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/structured-clone.any.js.ini
@@ -1,5 +1,4 @@
 [structured-clone.any.worker.html?61-80]
-  expected: TIMEOUT
   [Date: Wed Dec 31 1969 23:59:59 GMT+0000 (Coordinated Universal Time)]
     expected: FAIL
 
@@ -42,45 +41,6 @@
   [Date: Sun Nov 21 2286 02:46:40 GMT+0900 (日本標準時間)]
     expected: FAIL
 
-  [RegExp: /(?:)/]
-    expected: NOTRUN
-
-  [RegExp: /abc/]
-    expected: NOTRUN
-
-  [RegExp: /abc/g]
-    expected: NOTRUN
-
-  [RegExp: /abc/i]
-    expected: NOTRUN
-
-  [RegExp: /abc/gi]
-    expected: NOTRUN
-
-  [RegExp: /abc/m]
-    expected: NOTRUN
-
-  [RegExp: /abc/gm]
-    expected: NOTRUN
-
-  [RegExp: /abc/im]
-    expected: NOTRUN
-
-  [RegExp: /abc/gim]
-    expected: NOTRUN
-
-  [RegExp: /abc/gimsuy]
-    expected: NOTRUN
-
-  [ArrayBuffer: [object ArrayBuffer\]]
-    expected: NOTRUN
-
-  [Uint8Array: ]
-    expected: NOTRUN
-
-  [Uint8Array: 0,1,254,255]
-    expected: NOTRUN
-
   [Date: Wed Dec 31 1969 18:59:59 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
 
@@ -101,27 +61,6 @@
 
   [Date: Sat Nov 20 2286 12:46:40 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
-
-  [Date: Wed Dec 31 1969 15:59:59 GMT-0800 (Pacific Standard Time)]
-    expected: TIMEOUT
-
-  [Date: Wed Dec 31 1969 16:00:00 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 16:00:01 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 16:16:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Mon Jan 12 1970 05:46:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sat Sep 08 2001 18:46:40 GMT-0700 (Pacific Daylight Time)]
-    expected: NOTRUN
-
-  [Date: Sat Nov 20 2286 09:46:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
 
   [Date: Thu Jan 01 1970 05:29:59 GMT+0530 (India Standard Time)]
     expected: FAIL
@@ -146,262 +85,21 @@
 
 
 [structured-clone.any.html?81-100]
-  expected: TIMEOUT
-  [Uint16Array: 0,1,65534,65535]
-    expected: TIMEOUT
-
-  [Uint32Array: 0,1,4294967294,4294967295]
-    expected: NOTRUN
-
-  [Int8Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Int16Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Int32Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Uint8ClampedArray: 0,1,254,255]
-    expected: NOTRUN
-
-  [Float32Array: -Infinity,-1.5,-1,-0.5,0,0.5,1,1.5,Infinity,NaN]
-    expected: NOTRUN
-
-  [Float64Array: -Infinity,-1.7976931348623157e+308,-5e-324,0,5e-324,1.7976931348623157e+308,Infinity,NaN]
-    expected: NOTRUN
-
-  [Map: [object Map\]]
-    expected: NOTRUN
-
-  [Set: [object Set\]]
-    expected: NOTRUN
-
-  [Error: Error]
-    expected: NOTRUN
-
-  [Error: Error: abc]
-    expected: NOTRUN
-
-  [EvalError: EvalError]
-    expected: NOTRUN
-
-  [EvalError: EvalError: ghi]
-    expected: NOTRUN
-
-  [RangeError: RangeError]
-    expected: NOTRUN
-
-  [RangeError: RangeError: ghi]
-    expected: NOTRUN
-
-  [ReferenceError: ReferenceError]
-    expected: NOTRUN
-
-  [ReferenceError: ReferenceError: ghi]
-    expected: NOTRUN
-
-  [SyntaxError: SyntaxError]
-    expected: NOTRUN
-
   [SyntaxError: SyntaxError: ghi]
     expected: FAIL
 
-  [Float16Array: -Infinity,-1.5,-1,-0.5,0,0.5,1,1.5,Infinity,NaN]
-    expected: NOTRUN
-
 
 [structured-clone.any.html?101-last]
-  expected: TIMEOUT
-  [TypeError: TypeError]
-    expected: NOTRUN
-
-  [TypeError: TypeError: ghi]
-    expected: NOTRUN
-
-  [URIError: URIError]
-    expected: NOTRUN
-
-  [URIError: URIError: ghi]
-    expected: NOTRUN
-
-  [Array: ]
-    expected: NOTRUN
-
-  [Array: 1,2,3]
-    expected: NOTRUN
-
-  [Array: foo,bar,,,,,,,,,true,false,,,,,,,,,123,456,,,,,,,,,]
-    expected: NOTRUN
-
-  [Array: foo,bar]
-    expected: NOTRUN
-
-  [Object: [object Object\]]
-    expected: NOTRUN
-
-  [DOMMatrix: matrix(1, 0, 0, 1, 0, 0)]
-    expected: NOTRUN
-
-  [DOMMatrixReadOnly: matrix(1, 0, 0, 1, 0, 0)]
-    expected: NOTRUN
-
-  [DOMPoint: [object DOMPoint\]]
-    expected: NOTRUN
-
-  [DOMPointReadOnly: [object DOMPointReadOnly\]]
-    expected: NOTRUN
-
-  [DOMRect: [object DOMRect\]]
-    expected: NOTRUN
-
-  [DOMRectReadOnly: [object DOMRectReadOnly\]]
-    expected: NOTRUN
-
-  [ImageData: [object ImageData\]]
-    expected: NOTRUN
-
-  [Blob: [object Blob\]]
-    expected: NOTRUN
-
   [File: [object File\]]
-    expected: NOTRUN
+    expected: FAIL
 
   [FileList: [object FileList\]]
-    expected: NOTRUN
-
-  [SyntaxError: SyntaxError: ghi]
-    expected: TIMEOUT
-
-  [Not serializable: function: function() {}]
-    expected: NOTRUN
-
-  [Not serializable: symbol: Symbol(desc)]
-    expected: NOTRUN
-
-  [Not serializable: Window: [object Window\]]
-    expected: NOTRUN
-
-  [Not serializable: Event: [object Event\]]
-    expected: NOTRUN
-
-  [Not serializable: MessageChannel: [object MessageChannel\]]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [structured-clone.any.worker.html?21-40]
-  expected: TIMEOUT
-  [number: Infinity]
-    expected: TIMEOUT
-
-  [bigint: -12345678901234567890]
-    expected: NOTRUN
-
-  [bigint: -1]
-    expected: NOTRUN
-
-  [bigint: 0]
-    expected: NOTRUN
-
-  [bigint: 1]
-    expected: NOTRUN
-
-  [bigint: 12345678901234567890]
-    expected: NOTRUN
-
-  [string: ]
-    expected: NOTRUN
-
-  [string: this is a sample string]
-    expected: NOTRUN
-
-  [string: null(\x00)]
-    expected: NOTRUN
-
-  [Boolean: false]
-    expected: NOTRUN
-
-  [Boolean: true]
-    expected: NOTRUN
-
-  [Number: NaN]
-    expected: NOTRUN
-
-  [Number: -Infinity]
-    expected: NOTRUN
-
-  [Number: -1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [Number: -4294967295]
-    expected: NOTRUN
-
-  [Number: -2147483648]
-    expected: NOTRUN
-
-  [Number: -2147483647]
-    expected: NOTRUN
-
-  [Number: -1]
-    expected: NOTRUN
-
-  [Number: -5e-324]
-    expected: NOTRUN
-
-  [Number: -0]
-    expected: NOTRUN
-
 
 [structured-clone.any.html?41-60]
-  expected: TIMEOUT
-  [Number: 0]
-    expected: TIMEOUT
-
-  [Number: 1]
-    expected: NOTRUN
-
-  [Number: 5e-324]
-    expected: NOTRUN
-
-  [Number: 2147483647]
-    expected: NOTRUN
-
-  [Number: 2147483648]
-    expected: NOTRUN
-
-  [Number: 4294967295]
-    expected: NOTRUN
-
-  [Number: 1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [Number: Infinity]
-    expected: NOTRUN
-
-  [BigInt: -12345678901234567890]
-    expected: NOTRUN
-
-  [BigInt: -1]
-    expected: NOTRUN
-
-  [BigInt: 0]
-    expected: NOTRUN
-
-  [BigInt: 1]
-    expected: NOTRUN
-
-  [BigInt: 12345678901234567890]
-    expected: NOTRUN
-
-  [String: ]
-    expected: NOTRUN
-
-  [String: this is a sample string]
-    expected: NOTRUN
-
-  [String: null(\x00)]
-    expected: NOTRUN
-
   [Date: Mon Feb 10 1653 15:32:19 GMT+0918 (日本標準時間)]
     expected: FAIL
 
@@ -437,18 +135,6 @@
 
   [Date: Wed Dec 31 1969 18:43:20 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
-
-  [Date: Sun Feb 09 1653 22:20:22 GMT-0752 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sun Apr 24 1938 14:13:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sat Dec 20 1969 02:13:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 15:43:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
 
   [Date: Mon Feb 10 1653 12:06:48 GMT+0553 (India Standard Time)]
     expected: FAIL
@@ -464,55 +150,6 @@
 
 
 [structured-clone.any.worker.html?41-60]
-  expected: TIMEOUT
-  [Number: 0]
-    expected: TIMEOUT
-
-  [Number: 1]
-    expected: NOTRUN
-
-  [Number: 5e-324]
-    expected: NOTRUN
-
-  [Number: 2147483647]
-    expected: NOTRUN
-
-  [Number: 2147483648]
-    expected: NOTRUN
-
-  [Number: 4294967295]
-    expected: NOTRUN
-
-  [Number: 1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [Number: Infinity]
-    expected: NOTRUN
-
-  [BigInt: -12345678901234567890]
-    expected: NOTRUN
-
-  [BigInt: -1]
-    expected: NOTRUN
-
-  [BigInt: 0]
-    expected: NOTRUN
-
-  [BigInt: 1]
-    expected: NOTRUN
-
-  [BigInt: 12345678901234567890]
-    expected: NOTRUN
-
-  [String: ]
-    expected: NOTRUN
-
-  [String: this is a sample string]
-    expected: NOTRUN
-
-  [String: null(\x00)]
-    expected: NOTRUN
-
   [Date: Mon Feb 10 1653 15:32:19 GMT+0918 (日本標準時間)]
     expected: FAIL
 
@@ -549,18 +186,6 @@
   [Date: Wed Dec 31 1969 18:43:20 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
 
-  [Date: Sun Feb 09 1653 22:20:22 GMT-0752 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sun Apr 24 1938 14:13:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sat Dec 20 1969 02:13:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 15:43:20 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
   [Date: Mon Feb 10 1653 12:06:48 GMT+0553 (India Standard Time)]
     expected: FAIL
 
@@ -575,7 +200,6 @@
 
 
 [structured-clone.any.html?61-80]
-  expected: TIMEOUT
   [Date: Wed Dec 31 1969 23:59:59 GMT+0000 (Coordinated Universal Time)]
     expected: FAIL
 
@@ -618,45 +242,6 @@
   [Date: Sun Nov 21 2286 02:46:40 GMT+0900 (日本標準時間)]
     expected: FAIL
 
-  [RegExp: /(?:)/]
-    expected: NOTRUN
-
-  [RegExp: /abc/]
-    expected: NOTRUN
-
-  [RegExp: /abc/g]
-    expected: NOTRUN
-
-  [RegExp: /abc/i]
-    expected: NOTRUN
-
-  [RegExp: /abc/gi]
-    expected: NOTRUN
-
-  [RegExp: /abc/m]
-    expected: NOTRUN
-
-  [RegExp: /abc/gm]
-    expected: NOTRUN
-
-  [RegExp: /abc/im]
-    expected: NOTRUN
-
-  [RegExp: /abc/gim]
-    expected: NOTRUN
-
-  [RegExp: /abc/gimsuy]
-    expected: NOTRUN
-
-  [ArrayBuffer: [object ArrayBuffer\]]
-    expected: NOTRUN
-
-  [Uint8Array: ]
-    expected: NOTRUN
-
-  [Uint8Array: 0,1,254,255]
-    expected: NOTRUN
-
   [Date: Wed Dec 31 1969 18:59:59 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
 
@@ -677,27 +262,6 @@
 
   [Date: Sat Nov 20 2286 12:46:40 GMT-0500 (Eastern Standard Time)]
     expected: FAIL
-
-  [Date: Wed Dec 31 1969 15:59:59 GMT-0800 (Pacific Standard Time)]
-    expected: TIMEOUT
-
-  [Date: Wed Dec 31 1969 16:00:00 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 16:00:01 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Wed Dec 31 1969 16:16:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Mon Jan 12 1970 05:46:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
-
-  [Date: Sat Sep 08 2001 18:46:40 GMT-0700 (Pacific Daylight Time)]
-    expected: NOTRUN
-
-  [Date: Sat Nov 20 2286 09:46:40 GMT-0800 (Pacific Standard Time)]
-    expected: NOTRUN
 
   [Date: Thu Jan 01 1970 05:29:59 GMT+0530 (India Standard Time)]
     expected: FAIL
@@ -722,330 +286,17 @@
 
 
 [structured-clone.any.html?1-20]
-  expected: TIMEOUT
-  [undefined: undefined]
-    expected: TIMEOUT
-
-  [object: null]
-    expected: NOTRUN
-
-  [boolean: false]
-    expected: NOTRUN
-
-  [boolean: true]
-    expected: NOTRUN
-
-  [number: NaN]
-    expected: NOTRUN
-
-  [number: -Infinity]
-    expected: NOTRUN
-
-  [number: -1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [number: -4294967295]
-    expected: NOTRUN
-
-  [number: -2147483648]
-    expected: NOTRUN
-
-  [number: -2147483647]
-    expected: NOTRUN
-
-  [number: -1]
-    expected: NOTRUN
-
-  [number: -5e-324]
-    expected: NOTRUN
-
-  [number: -0]
-    expected: NOTRUN
-
-  [number: 0]
-    expected: NOTRUN
-
-  [number: 1]
-    expected: NOTRUN
-
-  [number: 5e-324]
-    expected: NOTRUN
-
-  [number: 2147483647]
-    expected: NOTRUN
-
-  [number: 2147483648]
-    expected: NOTRUN
-
-  [number: 4294967295]
-    expected: NOTRUN
-
-  [number: 1.7976931348623157e+308]
-    expected: NOTRUN
-
 
 [structured-clone.any.worker.html?1-20]
-  expected: TIMEOUT
-  [undefined: undefined]
-    expected: TIMEOUT
-
-  [object: null]
-    expected: NOTRUN
-
-  [boolean: false]
-    expected: NOTRUN
-
-  [boolean: true]
-    expected: NOTRUN
-
-  [number: NaN]
-    expected: NOTRUN
-
-  [number: -Infinity]
-    expected: NOTRUN
-
-  [number: -1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [number: -4294967295]
-    expected: NOTRUN
-
-  [number: -2147483648]
-    expected: NOTRUN
-
-  [number: -2147483647]
-    expected: NOTRUN
-
-  [number: -1]
-    expected: NOTRUN
-
-  [number: -5e-324]
-    expected: NOTRUN
-
-  [number: -0]
-    expected: NOTRUN
-
-  [number: 0]
-    expected: NOTRUN
-
-  [number: 1]
-    expected: NOTRUN
-
-  [number: 5e-324]
-    expected: NOTRUN
-
-  [number: 2147483647]
-    expected: NOTRUN
-
-  [number: 2147483648]
-    expected: NOTRUN
-
-  [number: 4294967295]
-    expected: NOTRUN
-
-  [number: 1.7976931348623157e+308]
-    expected: NOTRUN
-
 
 [structured-clone.any.worker.html?101-last]
-  expected: TIMEOUT
-  [TypeError: TypeError]
-    expected: NOTRUN
-
-  [TypeError: TypeError: ghi]
-    expected: NOTRUN
-
-  [URIError: URIError]
-    expected: NOTRUN
-
-  [URIError: URIError: ghi]
-    expected: NOTRUN
-
-  [Array: ]
-    expected: NOTRUN
-
-  [Array: 1,2,3]
-    expected: NOTRUN
-
-  [Array: foo,bar,,,,,,,,,true,false,,,,,,,,,123,456,,,,,,,,,]
-    expected: NOTRUN
-
-  [Array: foo,bar]
-    expected: NOTRUN
-
-  [Object: [object Object\]]
-    expected: NOTRUN
-
-  [DOMMatrix: [object DOMMatrix\]]
-    expected: NOTRUN
-
-  [DOMMatrixReadOnly: [object DOMMatrixReadOnly\]]
-    expected: NOTRUN
-
-  [DOMPoint: [object DOMPoint\]]
-    expected: NOTRUN
-
-  [DOMPointReadOnly: [object DOMPointReadOnly\]]
-    expected: NOTRUN
-
-  [DOMRect: [object DOMRect\]]
-    expected: NOTRUN
-
-  [DOMRectReadOnly: [object DOMRectReadOnly\]]
-    expected: NOTRUN
-
-  [ImageData: [object ImageData\]]
-    expected: NOTRUN
-
-  [Blob: [object Blob\]]
-    expected: NOTRUN
-
   [File: [object File\]]
-    expected: NOTRUN
-
-  [SyntaxError: SyntaxError: ghi]
-    expected: TIMEOUT
-
-  [Not serializable: function: function() {}]
-    expected: NOTRUN
-
-  [Not serializable: symbol: Symbol(desc)]
-    expected: NOTRUN
-
-  [Not serializable: DedicatedWorkerGlobalScope: [object DedicatedWorkerGlobalScope\]]
-    expected: NOTRUN
-
-  [Not serializable: Event: [object Event\]]
-    expected: NOTRUN
-
-  [Not serializable: MessageChannel: [object MessageChannel\]]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [structured-clone.any.worker.html?81-100]
-  expected: TIMEOUT
-  [Uint16Array: 0,1,65534,65535]
-    expected: TIMEOUT
-
-  [Uint32Array: 0,1,4294967294,4294967295]
-    expected: NOTRUN
-
-  [Int8Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Int16Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Int32Array: 0,1,-2,-1]
-    expected: NOTRUN
-
-  [Uint8ClampedArray: 0,1,254,255]
-    expected: NOTRUN
-
-  [Float32Array: -Infinity,-1.5,-1,-0.5,0,0.5,1,1.5,Infinity,NaN]
-    expected: NOTRUN
-
-  [Float64Array: -Infinity,-1.7976931348623157e+308,-5e-324,0,5e-324,1.7976931348623157e+308,Infinity,NaN]
-    expected: NOTRUN
-
-  [Map: [object Map\]]
-    expected: NOTRUN
-
-  [Set: [object Set\]]
-    expected: NOTRUN
-
-  [Error: Error]
-    expected: NOTRUN
-
-  [Error: Error: abc]
-    expected: NOTRUN
-
-  [EvalError: EvalError]
-    expected: NOTRUN
-
-  [EvalError: EvalError: ghi]
-    expected: NOTRUN
-
-  [RangeError: RangeError]
-    expected: NOTRUN
-
-  [RangeError: RangeError: ghi]
-    expected: NOTRUN
-
-  [ReferenceError: ReferenceError]
-    expected: NOTRUN
-
-  [ReferenceError: ReferenceError: ghi]
-    expected: NOTRUN
-
-  [SyntaxError: SyntaxError]
-    expected: NOTRUN
-
   [SyntaxError: SyntaxError: ghi]
     expected: FAIL
 
-  [Float16Array: -Infinity,-1.5,-1,-0.5,0,0.5,1,1.5,Infinity,NaN]
-    expected: NOTRUN
-
 
 [structured-clone.any.html?21-40]
-  expected: TIMEOUT
-  [number: Infinity]
-    expected: TIMEOUT
-
-  [bigint: -12345678901234567890]
-    expected: NOTRUN
-
-  [bigint: -1]
-    expected: NOTRUN
-
-  [bigint: 0]
-    expected: NOTRUN
-
-  [bigint: 1]
-    expected: NOTRUN
-
-  [bigint: 12345678901234567890]
-    expected: NOTRUN
-
-  [string: ]
-    expected: NOTRUN
-
-  [string: this is a sample string]
-    expected: NOTRUN
-
-  [string: null(\x00)]
-    expected: NOTRUN
-
-  [Boolean: false]
-    expected: NOTRUN
-
-  [Boolean: true]
-    expected: NOTRUN
-
-  [Number: NaN]
-    expected: NOTRUN
-
-  [Number: -Infinity]
-    expected: NOTRUN
-
-  [Number: -1.7976931348623157e+308]
-    expected: NOTRUN
-
-  [Number: -4294967295]
-    expected: NOTRUN
-
-  [Number: -2147483648]
-    expected: NOTRUN
-
-  [Number: -2147483647]
-    expected: NOTRUN
-
-  [Number: -1]
-    expected: NOTRUN
-
-  [Number: -5e-324]
-    expected: NOTRUN
-
-  [Number: -0]
-    expected: NOTRUN
