--- a/tests/wpt/meta/IndexedDB/transaction-relaxed-durability.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/transaction-relaxed-durability.any.js.ini
@@ -1,40 +1,32 @@
 [transaction-relaxed-durability.any.html]
-  expected: TIMEOUT
   [Committed data can be read back out: case 0]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Committed data can be read back out: case 1]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 2]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 3]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 4]
-    expected: NOTRUN
-
-  [Invalid durability option throws a TypeError]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [transaction-relaxed-durability.any.worker.html]
-  expected: TIMEOUT
   [Committed data can be read back out: case 0]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Committed data can be read back out: case 1]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 2]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 3]
-    expected: NOTRUN
+    expected: FAIL
 
   [Committed data can be read back out: case 4]
-    expected: NOTRUN
-
-  [Invalid durability option throws a TypeError]
-    expected: NOTRUN
+    expected: FAIL
