--- a/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-committed.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-committed.any.js.ini
@@ -2,21 +2,21 @@
   expected: ERROR
 
 [upgrade-transaction-lifecycle-committed.any.worker.html]
-  expected: TIMEOUT
+  expected: ERROR
   [in the complete event handler for a committed transaction]
-    expected: TIMEOUT
+    expected: FAIL
 
   [in a setTimeout(0) callback after the complete event is fired for a committed transaction]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [upgrade-transaction-lifecycle-committed.any.sharedworker.html]
   expected: ERROR
 
 [upgrade-transaction-lifecycle-committed.any.html]
-  expected: TIMEOUT
+  expected: ERROR
   [in the complete event handler for a committed transaction]
-    expected: TIMEOUT
+    expected: FAIL
 
   [in a setTimeout(0) callback after the complete event is fired for a committed transaction]
-    expected: NOTRUN
+    expected: FAIL
