--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
@@ -1,22 +1,21 @@
 [reading-autoincrement-indexes.any.html]
-  expected: TIMEOUT
   [IDBIndex.getAll() for an index on the autoincrement key]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBIndex.getAllKeys() for an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.get() for an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.getAll() for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.getAllKeys() returns correct result for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.get() for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [reading-autoincrement-indexes.any.sharedworker.html]
@@ -26,21 +25,20 @@
   expected: ERROR
 
 [reading-autoincrement-indexes.any.worker.html]
-  expected: TIMEOUT
   [IDBIndex.getAll() for an index on the autoincrement key]
-    expected: TIMEOUT
+    expected: FAIL
 
   [IDBIndex.getAllKeys() for an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.get() for an index on the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.getAll() for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.getAllKeys() returns correct result for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
 
   [IDBIndex.get() for an index not covering the autoincrement key]
-    expected: NOTRUN
+    expected: FAIL
