--- a/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-user-aborted.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-user-aborted.any.js.ini
@@ -1,16 +1,16 @@
 [upgrade-transaction-lifecycle-user-aborted.any.worker.html]
-  expected: TIMEOUT
+  expected: ERROR
   [synchronously after abort() is called]
     expected: FAIL
 
   [in a promise microtask after abort() is called, before the transaction abort event is fired]
-    expected: TIMEOUT
+    expected: FAIL
 
   [in the abort event handler for a transaction aborted due to an abort() call]
-    expected: NOTRUN
+    expected: FAIL
 
   [in a setTimeout(0) callback after the abort event is fired for a transaction aborted due to an abort() call]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [upgrade-transaction-lifecycle-user-aborted.any.html]
@@ -19,13 +19,13 @@
     expected: FAIL
 
   [in a promise microtask after abort() is called, before the transaction abort event is fired]
-    expected: TIMEOUT
+    expected: FAIL
 
   [in the abort event handler for a transaction aborted due to an abort() call]
-    expected: NOTRUN
+    expected: FAIL
 
   [in a setTimeout(0) callback after the abort event is fired for a transaction aborted due to an abort() call]
-    expected: NOTRUN
+    expected: FAIL
 
 
 [upgrade-transaction-lifecycle-user-aborted.any.sharedworker.html]
