Hacky accessibility tree for testing accesskit patch
Signed-off-by: Delan Azabani <dazabani@igalia.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ publish = false
 rust-version = "1.86.0"
 
 [workspace.dependencies]
+accesskit = "0.21.1"
 accountable-refcell = "0.2.2"
 aes = "0.8.4"
 aes-gcm = "0.10.3"
